# PhysicalAI---Humanoid-Robotics-TextBook

./: .gitignore  .markdownlint.json  README.md  docusaurus.config.ts  package-lock.json  package.json  sidebars.ts  tsconfig.json  vercel.json
.claude/: settings.local.json
.github/workflows/: deploy.yml
.specify/memory/: constitution.md
backend/: .env.example  .gitignore  README.md  main.py  models.py  pyproject.toml  requirements.txt  routes.py
docs/: conventions.md  intro.md  prerequisites.md
docs/appendices/: _category_.json  bibliography.md  glossary.md  hardware.md  installation.md  troubleshooting.md
docs/capstone/: _category_.json  ch17-capstone-project.md  index.md
docs/module-1-ros2/: _category_.json  ch01-intro-ros2.md  ch02-nodes-topics.md  ch03-urdf-kinematics.md  ch04-python-agents.md  index.md
docs/module-2-digital-twin/: _category_.json  ch05-physics-sim.md  ch06-gazebo-twin.md  ch07-sensor-sim.md  ch08-unity-hri.md  index.md
docs/module-3-nvidia-isaac/: _category_.json  ch09-isaac-intro.md  ch10-synthetic-data.md  ch11-reinforcement-learning.md  ch12-sim2real.md  index.md
docs/module-4-vla/: _category_.json  ch13-vla-intro.md  ch14-llm-planning.md  ch14-llm-planning.md.bak  ch15-multimodal-perception.md  ch16-embodied-agents.md  index.md
specs/001-backend-frontend-integration/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/001-textbook-embedding-pipeline/: spec.md
specs/001-textbook-rag-kb/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/002-rag-retrieval/: data-model.md  (+5 more)
(+60 files in other folders)
